Add translucent background
